fixed login alignment

--- a/ember/flightpubember/app/styles/app.css
+++ b/ember/flightpubember/app/styles/app.css
@@ -1457,7 +1457,7 @@ a{
 
 	.loginSignup-top{
 		margin: 0 auto;
-		width: 295px;
+		width: 344px;
 	}
 
 	.loginSignup-top button{
